--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "bugs": {
         "web": "https://github.com/requirejs/text/issues"
     },
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/requirejs/text.git"
-        }
-    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/requirejs/text.git"
+    },
     "licenses": [
         {
             "type": "MIT",
